--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/pranavbaburaj/dev-cli#readme",
   "dependencies": {
+    "@octokit/core": "^3.4.0",
     "@types/chalk": "^2.2.0",
+    "@types/inquirer": "^7.3.1",
     "@types/node": "^15.0.2",
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
