--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/chalk": "^2.2.0",
     "@types/inquirer": "^7.3.1",
     "@types/node": "^15.0.2",
+    "@types/table": "^6.3.2",
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
-    "inquirer": "^8.0.0"
+    "inquirer": "^8.0.0",
+    "table": "^6.7.0"
   }
 }
