--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "homepage": "https://github.com/pranavbaburaj/dev-cli#readme",
   "dependencies": {
     "@octokit/core": "^3.4.0",
+    "@types/boxen": "^3.0.1",
     "@types/chalk": "^2.2.0",
     "@types/inquirer": "^7.3.1",
     "@types/node": "^15.0.2",
     "@types/table": "^6.3.2",
     "axios": "^0.21.1",
+    "boxen": "^5.0.1",
     "chalk": "^4.1.1",
     "inquirer": "^8.0.0",
     "table": "^6.7.0"
